# leg-up

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  missing_company_sector_list.yml  pyproject.toml  requirements.txt  sectors_influx.yml
cli/: README.md  cli_commands.py  run.py
cli/tests/: test_cli_commands.py
config/: ccs_cost_info.yml  test.yml
config/ccs/: ccs_cost_info.yml  fig_data_locs.yml  pvwatts.yml  real_world_scenarios.yml  rhg_scenarios.yml  solar_comparison_case.yml  test_config.yml
config/data_readers/: newton_daily_weather.yml  newton_hourly_weather.yml  worcester_weather.yml
config/weather/: newton_weather.yml
curiosity/dna/: query_snp.py
data/: README.md
data/general/: us_state_abbrev.py
data/processing_scripts/: adjust_prices.py  ammonia_plant_location.py  assemble_rooftop_solar_data.py  build_breakeven_dataset.py  cement.py  county.py  expand_states.py  get_pvwatts_solar_data.py  ihme_cancer_mortality.py  ihme_mortality.py  ihs_well_density.py  lump_coal.py  nih_cdc_cancer_incidence.py  number_oil_gas_wells.py  water_source.py  which_fields.yaml
poetry-demo/: pyproject.toml
projects/: scratch.ipynb  search_term_ccs_laws4.yml  test.yml
projects/buildout/: scratch.ipynb
projects/ccs/: README.md  build_breakeven_dataset.py  ccs_costs.py  ccs_project.py  ensembles.py  project.py  rhg_scenarios.py  rooftop_solar_project.py  run.py  run_ccs_analysis.py  run_rooftop_solar.py
projects/dna/: query_snp.py
projects/econ/: econ.ipynb  energy_function.py  facility.py  test.yml
projects/iam/: README.md  config.yml  energy_system.py  eslim.py  scratch.ipynb  sensitivity.py
projects/ipcc/: scratch.ipynb
projects/lobbying/: README.md  README_column_name_explanation.md  additional_search_terms.yml  analysis.ipynb  analysis_copy.ipynb  bill_abbreviations.yml  bill_numbers.yml  ccs_laws.yml  ccs_laws_COPY.yml  ccs_laws_original_query.yml  ccs_lobbying.py  ccs_postproc_specifications.yml  ccs_utils.py  chat_gpt_query  company_name_replacements.yml  compile_ccs.py  compile_results.py  config_ccs_lda.yml  config_ccs_other_runs.yml  config_oil_gas_organizations.yml  config_steel_iron_no_ccs.yml  config_steel_iron_organizations.yml  lda_query.py  lda_query_utils.py  list_new.py  lobbying.ipynb  postproc.py  (+50 more)
utils/: api.py  assemble_data.py  calcs.py  data.py  io.py  location.py  time.py
(+146 files in other folders)
